<?xml version="1.0" encoding="utf-8"?>
<!--Generated by crowdin.net-->
<resources>
  <string name="app_name">My App List</string>
  <string name="main_no_files">No XML files found</string>
  <string name="main_select_files">Select files to load</string>
  <string name="configuration_title">Settings</string>
  <string name="configuration_system_apps">System apps</string>
  <string name="configuration_system_apps_msg">Hide system apps?</string>
  <string name="backup_title">Backup</string>
  <string name="backup_ignored_apps_title">Ignored apps</string>
  <string name="backup_ignored_apps_summary">Select ignored apps</string>
  <string name="backup_check_title">Backup active</string>
  <string name="backup_check_summary">Active for automating backup</string>
  <string name="about_title">About</string>
  <string name="about_web_title">projectsexception.com</string>
  <string name="about_web_summary">Visit my web page</string>
  <string name="about_email_title">info@projectsexception.com</string>
  <string name="about_email_summary">Mail me!</string>
  <string name="about_twitter_title">\@ProException</string>
  <string name="about_twitter_summary">Follow me!</string>
  <string name="about_translate_title">Translate</string>
  <string name="about_translate_summary">Help translate My App List</string>
  <string name="about_credits_title">Credits</string>
  <string name="about_credits_summary">See the credits and acknowledgments</string>
  <string name="about_email">info@projectsexception.com</string>
  <string name="about_subject">[My App List] - </string>
  <string name="about_source_title">Source code</string>
  <string name="about_source_summary">Please, help with the development</string>
  <string name="web_url">http://projectsexception.com</string>
  <string name="twitter_url">http://twitter.com/ProException</string>
  <string name="source_url">https://github.com/projectsexception/MyAppList</string>
  <string name="translate_url">http://crowdin.net/project/my-app-list/invite</string>
  <string name="credits_url">https://github.com/projectsexception/MyAppList/blob/master/CREDITS.md</string>
  <string name="load_list">Load List</string>
  <string name="new_list">Applications</string>
  <string name="new_file_dialog_title">File name</string>
  <string name="new_file_dialog_msg">Select file name. If a file with the same name existis, it will be overwritten!.</string>
  <string name="new_file_dialog_name">myapplist-%s.xml</string>
  <string name="backup_filename">myapplist-backup.xml</string>
  <string name="share_html_filename">myapplist-backup.html</string>
  <string name="share_text_filename">myapplist-backup.txt</string>
  <string name="empty_list_error">No selected elements</string>
  <string name="empty_list_install_error">All applications are installed</string>
  <string name="empty_name_error">Name can\'t be empty</string>
  <string name="empty_list_post_error">No applications selected</string>
  <string name="export_init">Starting export</string>
  <string name="export_successfully">File successfully created</string>
  <string name="export_successfully_update">File successfully updated</string>
  <string name="export_failed">Error creating file: %s</string>
  <string name="export_failed_update">Error updating file: %s</string>
  <string name="menu_save">Save</string>
  <string name="menu_refresh">Refresh</string>
  <string name="menu_select_all">Select all</string>
  <string name="menu_unselect_all">Unselect all</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_share">Share</string>
  <string name="menu_delete">Delete</string>
  <string name="menu_install">Install</string>
  <string name="menu_load_file">Load file</string>
  <string name="share_chooser">Share with…</string>
  <string name="share_file_text">Shared by \'My App List\' https://play.google.com/store/apps/details?id=%s</string>
  <string name="share_file_html">&lt;a href=\"https://play.google.com/store/apps/details?id=%s\"&gt;Shared by \'My App List\'&lt;/a&gt;</string>
  <string name="share_text_send_failed">No activity was found to share the content</string>  
  <string name="share_file_failed">Error creating file</string>
  <string name="share_file_send_failed">No activity can open this file. Check it at: %s</string>
  <string name="share_title">Select format</string>
  <string name="share_xml">XML</string>
  <string name="share_html_file">HTML File</string>
  <string name="share_html">HTML</string>
  <string name="share_text_file">Text File</string>
  <string name="share_text">Text</string>
  <string name="share_xml_message">The XML file can be opened by \'My App List\'.\nYou can send this file to your contacts or save it for a later use.\nRemember, the XML only stores the name and the identification of the application, not the application himself.</string>  
  <string name="share_text_message">Sharing the applications in text format allows you to send the list in a email or message with the url to Google Play Store.</string>  
  <string name="share_text_file_message">Sharing the applications in text format allows you to send the list in a email or message with the url to Google Play Store.\nThis text file can be saved in anywhere or sent by email.\nRemember that \'My App List\' can read the XML file but not the text file.</string>  
  <string name="share_html_message">Sharing the applications in HTML format allows you to send the list in a email with clickeable links to Google Play Store.</string>  
  <string name="share_html_file_message">Sharing the applications in HTML format allows you to send the list in a email with clickeable links to Google Play Store.\nThis HTML file can be saved in anywhere or sent by email.\nRemember that \'My App List\' can read the XML file but not the HTML file, however you can open this file in a browser to see the links.</string>  
  <string name="share_xml_error">Error sharing XML file</string>
  <string name="ab_title_install_list">Installing Applications</string>
  <string name="ab_title_ignored_list">Ignored Applications</string>
  <string name="ab_title_file_list">File Applications</string>
  <string name="ab_title_share">Share Applications</string>
  <string name="share_check_footer">Add footer to text?</string>  
  <string name="share_button_type_text">Inline Text</string>
  <string name="share_button_type_file">File</string>  
  <string name="share_button_export">Share</string>  
  <string name="play_google">market://details?id=%s</string>
  <string name="play_google_web_html">&lt;a href=\"https://play.google.com/store/apps/details?id=%1$s\"&gt;%2$s&lt;/a&gt;</string>
  <string name="play_google_web_text">%2$s https://play.google.com/store/apps/details?id=%1$s</string>
  <string name="error_creating_dir">Can\'t access to %s on sdcard</string>
  <string name="error_creating_file">Can\'t write on file %s</string>
  <string name="problem_no_google_play">Google Play market not found</string>
  <string name="application_information">System intormation</string>
  <string name="application_play">Google Play</string>
  <string name="content_desc_application_icon">Application Icon</string>
  <string name="content_desc_application_title">Application title</string>
  <string name="content_desc_button_details">Button to see application details</string>
  <string name="cancel_install">Redirecting to Google Play in %d seconds\nPress to finish process</string>
  <string name="app_info_not_installed">Application not installed</string>
  <string name="app_info_local_installed">Application installed</string>
  <string name="app_info_sd_installed">Application installed on external storage</string>
  <string name="app_info_play_linked">This application was installed from Google Play</string>
  <string name="app_info_play_not_linked">This application wasn\'t installed from Google Play</string>
  <string name="app_info_permissions">Permissions</string>
  <string name="app_info_no_permissions">No declared permissions</string>
  <string name="app_info_version">Version %1$s (%2$d)</string>
  <string name="app_info_date">Installed on %1$s. Updated on %2$s</string>
  <string name="content_desc_item_details">See app details</string>
  <string name="configuration_theme">Theme</string>
  <string name="rate_dialog_title">Rate My App List</string>
  <string name="rate_dialog_msg">My App List is a free application with no ads. If you enjoy using it, please take a moment to rate it. Thanks for your support!</string>
  <string name="rate_dialog_negative">No thanks</string>
  <string name="rate_dialog_neutral">Remind me later</string>
  <string name="rate_dialog_positive">Rate it!</string>  
  <string name="fragment_list_empty">Empty list</string>  
  <string name="backup_dialog_title">Backup service enabled</string>  
  <string name="backup_dialog_message">The backup service is now enabled. When you install or uninstall new applications \'My App List\' will generate a new XML file. Do you want to generate a new file now?. Click \'Cancel\' if you created a backup file recently.</string>  
  <string name="error_start_application">Can\'t start application</string>
    <string name="dialog_install_title">Install applications</string>
    <string name="dialog_install_message">This screen can help you to install the selected applications. It will open
        Google Play with every application in this list. You can stop this process at any time. Remember to press back button after each installation.
    </string>
    <string name="install_process_finished">Process finished</string>
    <string name="start_application">Start</string>
    <string name="uninstall_application">Uninstall</string>
    <string name="stop_application">Stop</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
</resources>
