<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/ic_menu_select_all"
        android:showAsAction="ifRoom"
        android:title="@string/menu_select_all"/>
    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_menu_save"
        android:showAsAction="ifRoom"
        android:title="@string/menu_save"/>
    <item
        android:id="@+id/menu_share"        
        android:icon="@drawable/ic_menu_share"
        android:showAsAction="ifRoom"
        android:title="@string/menu_share"/>
    <item
        android:id="@+id/menu_install"
        android:icon="@drawable/ic_menu_install"
        android:showAsAction="ifRoom"
        android:title="@string/menu_install"/>

</menu>