<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_menu_info_details"
            style="?appInfoButtonStyle"
            android:text="@string/application_information" />

        <TextView
            android:id="@+id/play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/play_icon"
            style="?appInfoButtonStyle"
            android:text="@string/application_play" />
    </LinearLayout>

    <View
        android:id="@+id/buttons_separador"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height"
        android:layout_above="@+id/buttons"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#C2C2C2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons_separador"
        android:padding="10dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:src="@drawable/ic_default_launcher"
                android:contentDescription="@string/content_desc_application_icon" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/icon"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@+id/icon"
                android:singleLine="true"
                android:text="@string/app_info_version" />

            <View
                android:id="@+id/title_separador"
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_height"
                android:layout_below="@+id/version"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#C2C2C2" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_separador"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:text="@string/app_info_not_installed" />

            <TextView
                android:id="@+id/play_linked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/status"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:singleLine="true"
                android:text="@string/app_info_play_linked" />
            
            <LinearLayout
                android:id="@+id/action_buttons" 
                android:layout_below="@+id/play_linked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <TextView
                    android:id="@+id/start_application"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:drawableTop="@drawable/ic_menu_play_clip"
                    android:text="@string/start_application"
                    android:singleLine="true"
                    style="?android:buttonStyle"/>

                <TextView
                    android:id="@+id/uninstall_application"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:drawableTop="@drawable/ic_menu_delete"
                    android:text="@string/uninstall_application"
                    android:singleLine="true"
                    style="?android:buttonStyle"/>
                
                <TextView
                    android:id="@+id/stop_application"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:drawableTop="@drawable/ic_menu_stop"
                    android:text="@string/stop_application"
                    android:singleLine="true"
                    style="?android:buttonStyle"/>
                
            </LinearLayout>

            <LinearLayout
                android:id="@+id/app_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/buttons_separador"
                android:layout_below="@+id/action_buttons"
                android:orientation="vertical" >

                <View
                    android:id="@+id/app_date_sep"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/separator_height"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="#C2C2C2" />

                <TextView
                    android:id="@+id/app_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/app_info_date" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/separator_height"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#C2C2C2" />

                <TextView
                    android:id="@+id/permissions_title"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/app_info_permissions" />

                <TextView
                    android:id="@+id/permissions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/app_info_no_permissions" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>