<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/loadList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:onClick="loadList"
        android:padding="20dp"
        android:text="@string/load_list" />

    <Button
        android:id="@+id/newList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loadList"
        android:layout_margin="15dp"
        android:onClick="newList"
        android:padding="20dp"
        android:text="@string/new_list" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/newList"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            style="?attr/frontImageStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_desc_application_title" />
    </LinearLayout>

</RelativeLayout>